--- a/lymall.com/conf/conf.toml
+++ b/lymall.com/conf/conf.toml
@@ -13,9 +13,9 @@ port = 8973
 ## 是否调试模式
 debug = true
 ## 数据库连接地址
-address = "124.239.10.62"
+address = "127.0.0.1"
 ## 数据库端口
-port = 9031
+port = 3306
 ## 连接池最大连接数
 max_idle_conns = 64
 ## 默认打开连接数
@@ -25,7 +25,7 @@ user = "atisafe"
 ## 数据库密码
 passwd = "ty123456"
 ## 数据库名
-db_name = "tslc"
+db_name = "lymall"
 ## 数据库表前缀
 prefix = ""
 ## 定时保活定
