购物车雏形

--- a/wemall/app.json
+++ b/wemall/app.json
@@ -29,7 +29,7 @@
         "pagePath": "pages/cart/index",
         "iconPath": "images/nav/cart-off.png",
         "selectedIconPath": "images/nav/cart-on.png",
-        "text": "购物车"
+        "text": "收藏夹"
       },
       {
         "pagePath": "pages/my/index",
